--- a/views/leads.xml
+++ b/views/leads.xml
@@ -19,7 +19,7 @@
         <record id="action_motion_leads_tree" model="ir.actions.act_window">
             <field name="name">Leads</field>
             <field name="res_model">motion.leads</field>
-            <field name="view_mode">tree,form</field>
+            <field name="view_mode">tree</field>
             <field name="view_id" ref="view_motion_leads_tree"/>
         </record>
 
