--- a/views/leads.xml
+++ b/views/leads.xml
@@ -19,11 +19,11 @@
         <record id="action_motion_leads_tree" model="ir.actions.act_window">
             <field name="name">Leads</field>
             <field name="res_model">motion.leads</field>
-            <field name="view_mode">tree</field>
+            <field name="view_mode">tree,form</field>
             <field name="view_id" ref="view_motion_leads_tree"/>
         </record>
 
         <!-- Module menu -->
-        <menuitem id="menu_motion_leads" name="Leads" parent="marketing_menu" action="action_motion_leads_tree"/>
+        <menuitem id="menu_motion_leads" name="Marketing Leads" parent="marketing_menu" action="action_motion_leads_tree"/>
     </data>
 </odoo>
