feat: implement a new field (origin) and rename department

--- a/views/leads.xml
+++ b/views/leads.xml
@@ -9,7 +9,7 @@
                     <field name="name"/>
                     <field name="email"/>
                     <field name="phone_number"/>
-                    <field name="department"/>
+                    <field name="city"/>
                     <field name="curr_time"/>
                 </tree>
             </field>
